--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
     "dev": "webpack-dev-server --progress --mode development",
     "build": "webpack --progress --mode production"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,16 +14,20 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@webpack-cli/serve": "^1.3.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "dotenv": "^8.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^4.5.0",
     "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "react": "^17.0.1",
